--- a/css/home.css
+++ b/css/home.css
@@ -6,6 +6,7 @@
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
+	font-family: Helvetica;
 }
 body{
 	background-color: #9CAFB7;
@@ -15,7 +16,7 @@ body{
 	border:2px solid #4281A4;
 	background-color: white;
 	width: 1024px;
-	height:100vh;
+	height:100%;
 }
 #Menu{
 	width: 100%;
@@ -26,5 +27,21 @@ body{
 }
 #titulo
 {
-	margin-left:30%;	
+	margin-left:30%;
+	margin-bottom: 5%;	
 }
+
+.button{
+ width:80px;
+ margin-left: 89.5%;
+ margin-bottom: 1%;
+ text-decoration:none; 
+ text-align:center; 
+ padding:8px 16px; 
+ border:solid 1px #00720d; 
+ -webkit-border-radius:4px;
+ -moz-border-radius:4px; 
+ border-radius: 4px; 
+ font:15px;
+ background-color:#3bc753;    
+ }
