--- a/css/css/fontello.css
+++ b/css/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?11118512');
-  src: url('../font/fontello.eot?11118512#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?11118512') format('woff'),
-       url('../font/fontello.ttf?11118512') format('truetype'),
-       url('../font/fontello.svg?11118512#fontello') format('svg');
+  src: url('../font/fontello.eot?45763707');
+  src: url('../font/fontello.eot?45763707#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?45763707') format('woff'),
+       url('../font/fontello.ttf?45763707') format('truetype'),
+       url('../font/fontello.svg?45763707#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?11118512#fontello') format('svg');
+    src: url('../font/fontello.svg?45763707#fontello') format('svg');
   }
 }
 */
@@ -23,14 +23,15 @@
   font-family: "fontello";
   font-style: normal;
   font-weight: normal;
-  font-size:15px;
   speak: none;
  
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
-  margin-right:0px;
+  margin-right: .2em;
   text-align: center;
+  text-decoration: none;
+  color:black;
   /* opacity: .8; */
  
   /* For safety - reset parent styles, that can break glyph codes*/
@@ -42,10 +43,10 @@
  
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
-  margin-left: 0px;
+  margin-left: .2em;
  
   /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
+   font-size: 14.5px; 
  
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
@@ -55,6 +56,8 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-user-delete:before { content: '\e800'; } /* '' */
-.icon-user-add:before { content: '\e801'; } /* '' */
-.icon-cog:before { content: '\e802'; } /* '' */
+.icon-user:before { content: '\e800'; } /* '' */
+.icon-home:before { content: '\e801'; } /* '' */
+.icon-user-add:before { content: '\e802'; } /* '' */
+.icon-user-delete:before { content: '\e803'; } /* '' */
+.icon-cog:before { content: '\e804'; } /* '' */
