--- a/css/home.css
+++ b/css/home.css
@@ -38,10 +38,9 @@ body{
  text-decoration:none; 
  text-align:center; 
  padding:8px 16px; 
- border:solid 1px #00720d; 
  -webkit-border-radius:4px;
  -moz-border-radius:4px; 
  border-radius: 4px; 
  font:15px;
- background-color:#3bc753;    
+ background-color:#4281A4;    
  }
