--- a/css/css/fontello.css
+++ b/css/css/fontello.css
@@ -24,7 +24,7 @@
   font-style: normal;
   font-weight: normal;
   speak: none;
- 
+  cursor: pointer;
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
