--- a/css/home.css
+++ b/css/home.css
@@ -27,10 +27,13 @@ body{
 }
 #titulo
 {
-	margin-left:30%;
-	margin-bottom: 5%;	
+	/*margin-left:30%;*/
+	/*margin-bottom: 5%;	*/
 }
-
+.ContainerTitle
+{
+	margin: 0 auto;
+}
 .button{
  width:80px;
  margin-left: 89.5%;
@@ -42,5 +45,10 @@ body{
  -moz-border-radius:4px; 
  border-radius: 4px; 
  font:15px;
- background-color:#4281A4;    
+ background-color:#4281A4; 
+ cursor: pointer;   
+ }
+
+ .h{
+ 	margin-left: 760px;
  }
