--- a/css/home.css
+++ b/css/home.css
@@ -17,6 +17,7 @@ body{
 	background-color: white;
 	width: 1024px;
 	height:100%;
+	padding-bottom: 10px;
 }
 #Menu{
 	width: 100%;
@@ -40,7 +41,6 @@ body{
 .button{
  width:80px;
  margin-left: 89.5%;
- margin-bottom: 1%;
  text-decoration:none; 
  text-align:center; 
  padding:8px 16px; 
@@ -49,10 +49,30 @@ body{
  border-radius: 4px; 
  font:15px;
  background-color:#4281A4; 
- cursor: pointer;   
+ cursor: pointer;
+
  }
 
  .h{
  	margin-left: 760px;
  	font:20px;
  }
+
+.filtro{
+	background-color:#0e875b;
+	width:700px;
+	margin:15px 0px 0px 22px;
+	padding:5px;
+	border-radius:4px;
+}
+.filtro p {
+	color: white;
+}
+.filtro label {
+	color: white;
+}
+.filtro input
+{
+	margin-right:90px;
+	margin-bottom: 10px;
+}
