--- a/css/css/fontello-codes.css
+++ b/css/css/fontello-codes.css
@@ -4,3 +4,4 @@
 .icon-user-add:before { content: '\e802'; } /* '' */
 .icon-user-delete:before { content: '\e803'; } /* '' */
 .icon-cog:before { content: '\e804'; } /* '' */
+.icon-search:before { content: '\e805'; } /* '' */
