--- a/css/css/fontello.css
+++ b/css/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?45763707');
-  src: url('../font/fontello.eot?45763707#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?45763707') format('woff'),
-       url('../font/fontello.ttf?45763707') format('truetype'),
-       url('../font/fontello.svg?45763707#fontello') format('svg');
+  src: url('../font/fontello.eot?70306742');
+  src: url('../font/fontello.eot?70306742#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?70306742') format('woff'),
+       url('../font/fontello.ttf?70306742') format('truetype'),
+       url('../font/fontello.svg?70306742#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?45763707#fontello') format('svg');
+    src: url('../font/fontello.svg?70306742#fontello') format('svg');
   }
 }
 */
@@ -25,13 +25,13 @@
   font-weight: normal;
   speak: none;
   cursor: pointer;
+  color:black;
+ 
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
   margin-right: .2em;
   text-align: center;
-  text-decoration: none;
-  color:black;
   /* opacity: .8; */
  
   /* For safety - reset parent styles, that can break glyph codes*/
@@ -46,7 +46,7 @@
   margin-left: .2em;
  
   /* you can be more comfortable with increased icons size */
-   font-size: 14.5px; 
+   font-size: 14px; 
  
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
@@ -61,3 +61,4 @@
 .icon-user-add:before { content: '\e802'; } /* '' */
 .icon-user-delete:before { content: '\e803'; } /* '' */
 .icon-cog:before { content: '\e804'; } /* '' */
+.icon-search:before { content: '\e805'; } /* '' */
