--- a/css/home.css
+++ b/css/home.css
@@ -18,6 +18,7 @@ body{
 	width: 1024px;
 	height:100%;
 	padding-bottom: 10px;
+	overflow: hidden;
 }
 #Menu{
 	width: 100%;
@@ -41,6 +42,7 @@ body{
 .button{
  width:80px;
  margin-left: 89.5%;
+ margin-bottom: 5px;
  text-decoration:none; 
  text-align:center; 
  padding:8px 16px; 
@@ -51,6 +53,20 @@ body{
  background-color:#4281A4; 
  cursor: pointer;
 
+ }
+ #btn_buscar{
+ 	width:80px;
+	margin-left: 84%;
+	margin-bottom: 5px;
+	text-decoration:none; 
+	text-align:center; 
+	padding:8px 16px; 
+	-webkit-border-radius:4px;
+	-moz-border-radius:4px; 
+ 	border-radius: 4px; 
+	font:15px;
+	background-color:white; 
+	cursor: pointer;
  }
 
  .h{
@@ -70,11 +86,26 @@ body{
 	margin-bottom: 5px;
 	font-size: 20px;
 }
+.filtro table{
+	margin-left: 5px;
+	margin-bottom: 5px;
+	border-collapse: separate;
+    border-spacing:25px 0px;
+}
 .filtro label {
 	color: white;
 }
-.filtro input
+.filtro td
 {
-	margin-right:90px;
-	margin-bottom: 10px;
+	padding-bottom:8px;
+	padding-right: 20px;
+}
+.paginador{
+	float: right;
+	margin-right: 25px;
+	margin-top: 5px;
+}
+.paginador a{
+	font-size: 13px;
+	text-decoration: none;	
 }
