--- a/css/home.css
+++ b/css/home.css
@@ -6,7 +6,7 @@
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
-	font-family: Helvetica;
+	
 }
 body{
 	background-color: #9CAFB7;
@@ -34,6 +34,7 @@ body{
     margin: auto;
     margin-top:1%;
     width: 100%;
+    font-family: helvetica;
 }
 .ContainerTitle
 {
@@ -52,6 +53,7 @@ body{
  font:15px;
  background-color:#4281A4; 
  cursor: pointer;
+ font-family: helvetica;
 
  }
  #btn_buscar{
@@ -67,6 +69,7 @@ body{
 	font:15px;
 	background-color:white; 
 	cursor: pointer;
+	font-family: helvetica;
  }
 
  .h{
@@ -83,14 +86,16 @@ body{
 }
 .filtro p {
 	color: white;
-	margin-bottom: 5px;
+	margin-bottom: 10px;
 	font-size: 20px;
+	font-family: helvetica;
 }
 .filtro table{
 	margin-left: 5px;
 	margin-bottom: 5px;
 	border-collapse: separate;
     border-spacing:25px 0px;
+    font-family: helvetica;
 }
 .filtro label {
 	color: white;
@@ -108,4 +113,5 @@ body{
 .paginador a{
 	font-size: 13px;
 	text-decoration: none;	
+	font-family: helvetica;
 }
