done check a special character and done log in

--- a/admin/css/home.css
+++ b/admin/css/home.css
@@ -115,3 +115,10 @@ body{
 	text-decoration: none;	
 	font-family: helvetica;
 }
+#cs a{
+	color: white;
+	text-decoration: none;
+	float: right;
+	margin-right: 10px;
+	font-family: helvetica;
+}
