--- a/admin/css/home.css
+++ b/admin/css/home.css
@@ -17,6 +17,7 @@ body{
 	background-color: white;
 	width: 1024px;
 	height:100%;
+	min-height: 680px;
 	padding-bottom: 10px;
 	overflow: hidden;
 }
