--- a/admin/css/home.css
+++ b/admin/css/home.css
@@ -17,7 +17,7 @@ body{
 	background-color: white;
 	width: 1024px;
 	height:100%;
-	min-height: 680px;
+	min-height: 550px;
 	padding-bottom: 10px;
 	overflow: hidden;
 }
@@ -123,3 +123,26 @@ body{
 	margin-right: 10px;
 	font-family: helvetica;
 }
+
+footer{
+		width: 100%;
+		background: #4281A4;
+		padding:5px 5px;
+		height:50px;
+		font-family: helvetica;
+	}
+	footer a{
+		text-decoration: none;
+		color: white;
+	}
+	footer p {
+	letter-spacing: 1px;
+    color: white;
+    text-align: right;
+    float: right;
+	}
+
+	#dti{
+		float:left;
+	}
+
