--- a/admin/css/user.css
+++ b/admin/css/user.css
@@ -46,27 +46,9 @@
   width: 278px;
 }
 
-.login p.remember_me {
-  float: left;
-  margin-left: 20px;
-  line-height: 42px;
-}
-
-.login p.remember_me label {
-  font-size: 12px;
-  color: #9EACB2;
-  cursor: pointer;
-}
-
-.login p.remember_me input {
-  position: relative;
-  bottom: 1px;
-  margin-right: 4px;
-  vertical-align: middle;
-}
 
 .login p.submit {
-  text-align: right;
+  text-align: center;
 }
 
 .login-help {
